<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:layout_margin="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

<!--        // title-->
        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:text="@string/loginForm"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="normal|bold" />

<!--        //Email-->
        <EditText
            android:id="@+id/emailTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/emailTxtHint"
            android:layout_gravity="center"
            android:textColorHint="@color/red"
            android:textColor="@color/black"
            android:layout_marginBottom="10dp"
           />

<!--        //Password-->
        <EditText
            android:id="@+id/passTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/passTxtHint"
            android:textColorHint="@color/red"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:layout_marginBottom="10dp"
            android:inputType="textPassword"
            />

<!--        //Show Password-->
        <CheckBox
            android:id="@+id/showPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Show Password"


            />

<!--        //Button Login-->
        <Button
            android:id="@+id/btnLogin"
            android:text="@string/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:background="@drawable/radius"
            />

<!--        //Register now-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Dont have an account?" />

            <TextView
                android:id="@+id/registerNow"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:hint="@string/registerTxt"
                android:paddingStart="3dp"
                android:textColorHint="@color/black" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>